[workspace]
members = ["packages/*"]
resolver = "2"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"

[workspace.package]
authors = ["langyo <langyo.china@gmail.com>"]
publish = false

version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "^1"
async-trait = "^0.1"
derive_more = "*"
once_cell = "^1"

base64 = "^0.22"
bytes = "^1"
chrono = { version = "^0.4", features = ["serde", "unstable-locales"] }
futures = "^0.3"

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
postcard = { version = "^1", features = ["alloc"] }
strum = { version = "^0.26", features = ["derive"] }
uuid = { version = "^1", features = [
    'v4',
    'fast-rng',
    'macro-diagnostics',
    'serde',
] }

log = "^0.4"
env_logger = "^0.11"
tracing = "^0.1"
tracing-subscriber = "^0.3"
tracing-appender = "^0.2"

windows = { version = "^0.54", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_UI_WindowsAndMessaging",
] }

tokio = { version = "^1", features = ["full"] }
